--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
                 <li><a href="#!/list">list</a></li>
                 <li><a href="#!/userInfo">userInfo</a></li>
                 <li><a href="#!/csstest">csstest</a></li>
+                <li><a href="#!/direct">direct</a></li>
             </ul>
             <br>
         </div>
