--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
             <ul class="nav nav-tabs">
                 <li><a href="#!/hello">hello</a></li>
                 <li><a href="#!/list">list</a></li>
+                <li><a href="#!/userList">userlist</a></li>
                 <li><a href="#!/userInfo">userInfo</a></li>
                 <li><a href="#!/csstest">csstest</a></li>
                 <li><a href="#!/direct">direct</a></li>
